# ride-hailing-simulation

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONFIG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  SPEC.md  benchmark_compare.sh  ci.sh  docker-run.sh  experiment_results.json  experiment_results.parquet  rustfmt.toml  sim_ui_presets.json
crates/sim_core/: Cargo.toml
crates/sim_core/benches/: README.md  performance.rs
crates/sim_core/examples/: scenario_run.rs  scenario_run_large.rs
crates/sim_core/src/: agents.rs  clock.rs  distributions.rs  ecs.rs  lib.rs  patterns.rs  pricing.rs  profiling.rs  routing.rs  runner.rs  scenario.rs  simulation.rs  spatial.rs  spawner.rs  speed.rs  telemetry.rs  telemetry_export.rs  test_helpers.rs  traffic.rs
crates/sim_core/src/matching/: algorithm.rs  cost_based.rs  hungarian.rs  mod.rs  policy.rs  simple.rs  trait.rs  types.rs
crates/sim_core/src/routing/: osrm_spawn.rs
crates/sim_core/src/scenario/: build.rs  mod.rs  params.rs
crates/sim_core/src/spawner/: mod.rs  weighting.rs
crates/sim_core/src/systems/: batch_matching.rs  driver_decision.rs  driver_offduty.rs  match_accepted.rs  match_rejected.rs  matching.rs  mod.rs  movement.rs  pickup_eta_updated.rs  quote_accepted.rs  quote_decision.rs  quote_rejected.rs  repositioning.rs  request_inbound.rs  rider_cancel.rs  show_quote.rs  simple_matching.rs  spatial_index.rs  spawner.rs  telemetry_snapshot.rs  trip_completed.rs  trip_started.rs
crates/sim_core/src/telemetry_export/: agent_positions.rs  completed_trips.rs  snapshot_counts.rs  trips.rs  utils.rs  validate.rs
crates/sim_core/tests/: integration_clock_schedule_tests.rs  integration_osrm_spawn_fallback_tests.rs  integration_reposition_policy_tests.rs  integration_routing_provider_tests.rs  integration_scenario_builder_tests.rs  integration_spawn_flow_tests.rs  integration_system_end_to_end_tests.rs  integration_telemetry_export_tests.rs  integration_traffic_profile_tests.rs  load_tests.rs  system_driver_decision_tests.rs  system_driver_offduty_tests.rs  system_matching_flow_tests.rs  system_movement_routing_tests.rs  system_quote_flow_tests.rs  system_rider_cancel_tests.rs  system_trip_lifecycle_tests.rs
crates/sim_core/tests/support/: entities.rs  mod.rs  schedule.rs  world.rs
crates/sim_experiments/: Cargo.toml  README.md
crates/sim_experiments/examples/: parameter_sweep.rs  route_export.rs
crates/sim_experiments/src/: export.rs  health.rs  lib.rs  metrics.rs  parameter_spaces.rs  parameters.rs  runner.rs
crates/sim_experiments/src/export/: csv.rs  json.rs  parquet.rs  ranking.rs  writer_utils.rs
crates/sim_experiments/src/parameters/: combinations.rs  constraints.rs  conversion.rs  sampling.rs  tests.rs
crates/sim_serverless_sweep_lambda/: Cargo.toml  README.md
crates/sim_serverless_sweep_lambda/src/: lib.rs  runtime.rs
crates/sim_serverless_sweep_lambda/src/adapters/: mod.rs  (+3 more)
crates/sim_ui/: Cargo.toml
crates/sim_ui/src/: app.rs  main.rs
(+191 files in other folders)
