[package]
name = "sim_core"
version = "0.1.0"
edition = "2021"

[dependencies]
h3o = "0.8"
bevy_ecs = "0.13"
rand = "0.8"
parquet = "57.2.0"
arrow = "57.2.0"
pathfinding = "4.14"
lru = "0.12"

[features]
default = ["test-helpers"]
test-helpers = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
