[package]
name = "sim_experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
sim_core = { path = "../sim_core" }
bevy_ecs = "0.13"
rayon = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "57.2.0"
arrow = "57.2.0"

[dev-dependencies]
tempfile = "3.10"
