[package]
name = "sim_serverless_sweep_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-lambda = "1"
aws-sdk-s3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lambda_runtime = "0.13"
bevy_ecs = "0.13"
arrow = "57.2.0"
parquet = "57.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sim_serverless_sweep_core = { path = "../sim_serverless_sweep_core" }
sim_experiments = { path = "../sim_experiments" }
sim_core = { path = "../sim_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
