[package]
name = "sim_ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["osrm"]
osrm = ["sim_core/osrm"]

[dependencies]
sim_core = { path = "../sim_core" }
bevy_ecs = "0.13"
h3o = "0.8"
eframe = "0.33.3"
egui_plot = "0.34.0"
prost = "0.13.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
